Look for and child instructions to cancel, even if parent instruction not found/cancelled, because children might have been deferred.